
* 0.3.4 *
    
    * Strict Gem dependencies for mongrel_service. This version is compatible
      only with mongrel 1.0.x, 1.1.x and with win32-service 0.5.x.

* 0.3.3 *
    
    * Properly display package/gem version for mongrel_service. Closes #13823.
    
    * Updated ServiceFB to r80 to solve issue when compiling with FB > 0.17.
    
* 0.3.2 *
    
    * Solved detection of parent process at ServiceFB level
      (solves the x64 Windows issues).
    
    * Upgraded to ServiceFB 'trunk' (but pistoned it, just in case).
    
    * Fixed problems with ruby installations outside PATH or inside folders with spaces.
    
    * Activate FB pedantic warnings by default (is really useful).
    
* 0.3.1 *
    
    * Single Service (SingleMongrel) object type implemented.
    
    * Updated Rakefile to reflect the new building steps.
    
    * Removed SendSignal, too hackish for my taste, replaced with complete FB solution.
    
    * Added basic Process monitoring and re-spawning.
    